[BinaryTranslation] preliminary Megablock detection