@@ -1,6 +1,5 @@
 package pt.up.fe.specs.binarytranslation.detection.detectors.fixed;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
@@ -8,6 +7,7 @@ import pt.up.fe.specs.binarytranslation.detection.detectors.ASegmentDetector;
 import pt.up.fe.specs.binarytranslation.detection.detectors.BinarySegmentDetectionUtils;
 import pt.up.fe.specs.binarytranslation.detection.detectors.DetectorConfiguration;
 import pt.up.fe.specs.binarytranslation.detection.detectors.HashedSequence;
+import pt.up.fe.specs.binarytranslation.detection.trace.InstructionWindow;
 import pt.up.fe.specs.binarytranslation.instruction.Instruction;
 import pt.up.fe.specs.binarytranslation.stream.InstructionStream;
 
@@ -23,10 +23,10 @@ public abstract class AFixedSizeFrequentSequenceDetector extends ASegmentDetecto
     /*
      * Check if candidate sequence is valid
      */
-    private Boolean validSequence(List<Instruction> insts) {
+    private Boolean validSequence(InstructionWindow window) {
 
         // check if this subsequence is at all apt
-        for (Instruction inst : insts) {
+        for (Instruction inst : window.getWindow()) {
 
             // TODO fail with stream instructions
 
@@ -44,27 +44,25 @@ public abstract class AFixedSizeFrequentSequenceDetector extends ASegmentDetecto
     public void processStream(InstructionStream istream, Map<String, HashedSequence> hashed,
             Map<Integer, List<Integer>> addrs) {
 
-        List<Instruction> window = new ArrayList<Instruction>();
+        var window = new InstructionWindow(this.getConfig().getMaxsize());
 
         // make 1st window
-        for (int i = 0; i < this.getConfig().getMaxsize(); i++)
+        while (!window.isFull())
             window.add(istream.nextInstruction());
 
         // process entire stream
         do {
 
             // adjust to delay of last instruction in window
-            var delay = window.get(window.size() - 1).getDelay();
-            if (delay > 0) {
-                window.remove(0);
+            var delay = window.getLast().getDelay();
+            while (delay-- > 0)
                 window.add(istream.nextInstruction());
-            }
 
             // discard candidate?
             if (validSequence(window)) {
 
                 // create new candidate hash sequence
-                var newseq = BinarySegmentDetectionUtils.hashSequence(window);
+                var newseq = BinarySegmentDetectionUtils.hashSequence(window.getWindow());
 
                 // add sequence to occurrence counters (counting varies between static to trace detection)
                 BinarySegmentDetectionUtils.addAddrToList(addrs, newseq);
@@ -74,7 +72,6 @@ public abstract class AFixedSizeFrequentSequenceDetector extends ASegmentDetecto
             }
 
             // shift window by 1
-            window.remove(0);
             window.add(istream.nextInstruction());
 
         } while (istream.hasNext());
